manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: example-ui-service
            port:
              number: 80
      - pathType: Prefix
        path: "/static"
        backend:
          service:
            name: example-ui-service
            port:
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: example-api-service
            port:
              number: 80
      - pathType: Prefix
        path: "/actuator"
        backend:
          service:
            name: example-api-service
            port:
              number: 80
